kubernetes-templates/samba-ac-dc/1/ad-dc-samba-ad-dc-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  annotations:
    deployment.kubernetes.io/revision: "1"
  generation: 1
  labels:
    chart: samba-ad-dc-0.1.0
  name: ad-dc-samba-ad-dc
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ad-dc-samba-ad-dc
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: ad-dc-samba-ad-dc
    spec:
      containers:
      - env:
        - name: SAMBA_REALM
          value: ${SAMBA_REALM}
        - name: SAMBA_PASSWORD
          value: ${SAMBA_PASSWORD}
        - name: SAMBA_NO_TLS
          value: "yes"
        image: builditdigital/samba-ad-dc:latest
        imagePullPolicy: Always
        livenessProbe:
          failureThreshold: 3
          initialDelaySeconds: 40
          periodSeconds: 10
          successThreshold: 1
          tcpSocket:
            port: dns
          timeoutSeconds: 10
        name: samba-ad-dc
        ports:
        - containerPort: 389
          name: ldap
          protocol: TCP
        - containerPort: 53
          name: dns
          protocol: TCP
        readinessProbe:
          failureThreshold: 3
          initialDelaySeconds: 40
          periodSeconds: 10
          successThreshold: 1
          tcpSocket:
            port: dns
          timeoutSeconds: 1
        resources:
          requests:
            cpu: 100m
            memory: 64Mi
        terminationMessagePath: /dev/termination-log
        volumeMounts:
        - mountPath: /var/lib/samba
          name: data
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      securityContext: {}
      terminationGracePeriodSeconds: 30
      volumes:
      - name: data
        persistentVolumeClaim:
          claimName: ad-dc-samba-ad-dc
